Todos los servicios con el token + atributo mensajeError

--- a/ProExde1/nbproject/private/private.properties
+++ b/ProExde1/nbproject/private/private.properties
@@ -7,4 +7,4 @@ j2ee.server.middleware=C:/Users/SANTI/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\SANTI\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+user.properties.file=/home/arkano/.netbeans/8.2/build.properties
