--- a/ProExde1/nbproject/project.properties
+++ b/ProExde1/nbproject/project.properties
@@ -45,7 +45,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.jersey-server-1.18.1-sources.jar}:\
-    ${file.reference.ojdbc7.jar}
+    ${file.reference.ojdbc7.jar}:\
+    ${libs.javaee-api-7.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
