--- a/ProExde1/nbproject/private/private.properties
+++ b/ProExde1/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\SANTI\\AppData\\Roaming\\NetBeans\\8.0.1\\config\\GlassFishEE6\\Properties\\gfv31518304762.properties
+deploy.ant.properties.file=/home/arkano/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3174158971.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/SANTI/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/SANTI/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\SANTI\\GlassFish_Server\\glassfish;C:\\Users\\SANTI\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/SANTI/GlassFish_Server
+j2ee.server.domain=/home/arkano/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=/home/arkano/GlassFish_Server/glassfish
+j2ee.server.instance=[/home/arkano/GlassFish_Server/glassfish:/home/arkano/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/home/arkano/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
