--- a/ProExde1/nbproject/private/private.properties
+++ b/ProExde1/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=/home/arkano/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3174158971.properties
+deploy.ant.properties.file=/home/arkano/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3-1129213922.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/arkano/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=/home/arkano/GlassFish_Server/glassfish
-j2ee.server.instance=[/home/arkano/GlassFish_Server/glassfish:/home/arkano/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/arkano/GlassFish_Server
+j2ee.server.domain=/home/arkano/.netbeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=/usr/local/glassfish-4.1.1/glassfish
+j2ee.server.instance=[/usr/local/glassfish-4.1.1/glassfish:/usr/local/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/usr/local/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
